# CIS-278-HYA-CRN-86470

./: .gitignore  Assignment.html  CMakeLists.old.txt  CMakeLists.txt
10/15/: Flower.h  LAB: Plant information (vector).MD
Elevator Simulator/: Bank.cpp  Bank.h  BankTests.cpp  CMakeLists.txt  Elevator.cpp  Elevator.h  ElevatorPanel.cpp  ElevatorPassenger.cpp  ElevatorTests.cpp  Panel.cpp  Panel.h  Passenger.cpp  Passenger.h  PassengerTests.cpp  README.md  main.cpp
Elevator Simulator Test/: CMakeLists.txt
Elevator Simulator/app/: CMakeLists.txt  CMakeLists.txt.old  main.cpp
Elevator Simulator/include/: AbstractionWrapper.h  ActiveState.h  Bank.h  CMakeLists.txt  CMakeLists.txt.old  DoorState.h  Elevator.h  ElevatorConcepts.h  Heading.h  Passenger.h
Elevator Simulator/include/core/: BaseState.h  Core.h  TemplateState.h
Elevator Simulator/include/core/concepts/: Concepts.h
Elevator Simulator/include/core/detail/: BaseState.h  CallbackUtils.h  Concepts.h  EventDispatcher.h  MetaUtils.h  StateChangeCallback.h  StateChangeEvent.h  StateEventDispatcher.h  TemplateState.h
Elevator Simulator/include/core/event/: ChangeEventDispatcher.h  Domain.h  PriorityState.h  StateChangeCallback.h  StateChangeDispatcher.h  StateChangeEvent.h
Elevator Simulator/include/core/state/: BaseState.h  TemplateState.h
Elevator Simulator/include/core/utils/: MetaUtils.h
Elevator Simulator/include/elevator/: Domain.h  DomainEvent.h  DomainRegistry.h  DomainStates.h  Elevator.h  ElevatorController.h  ElevatorEventDispatcher.h  ElevatorStates.h  Passenger.h  States.h
Elevator Simulator/include/elevator/controllers/: ElevatorController.h
Elevator Simulator/include/elevator/detail/: BaseState.h  DomainState.h  DomainStates.h  DoorState.cpp  DoorState.h  DoorsClosed.h  DoorsClosing.h  DoorsOpened.h  DoorsOpening.h  GoingDown.h  GoingUp.h  Heading.cpp  Heading.h  OperationActive.h  OperationIdle.h  OperationState.h  Stopped.h  TemplateState.h
Elevator Simulator/include/elevator/events/: ElevatorEventDispatcher.h  ElevatorEventTypes.h
Elevator Simulator/include/elevator/models/: Bank.h  Elevator.h  Passenger.h
Elevator Simulator/include/elevator/models/states/: States.h  Variants.h
Elevator Simulator/include/elevator/models/states/details/: Active.h  Closed.h  Closing.h  GoingDown.h  GoingUp.h  Idle.h  Opened.h  Opening.h  Registry.h  Stopped.h  Types.h
Elevator Simulator/include/elevator/services/: DoorService.h  ElevatorPassengerService.h  ElevatorService.h  MovementService.h  PassengerService.h  StateNotificationService.h
Elevator Simulator/include/elevator/states/: Active.h  Closed.h  Closing.h  ElevatorStateRegistry.h  ElevatorStateTypes.h  ElevatorStateVariants.h  ElevatorStates.h  GoingDown.h  GoingUp.h  Idle.h  Opened.h  Opening.h  States.h  Stopped.h  Types.h  Variants.h
Elevator Simulator/include/elevator/states/details/: Active.h  Closed.h  Closing.h  GoingDown.h  GoingUp.h  Idle.h  Opened.h  Opening.h  Stopped.h
Elevator Simulator/src/: AbstractionWrapper.cpp  ActiveState.cpp  Bank.cpp  CMakeLists.txt  CMakeLists.txt.old  DoorState.cpp  Elevator.cpp  ElevatorConcepts.cpp  Heading.cpp  Passenger.cpp  Playground.cpp
Elevator Simulator/src/core/: CMakeLists.txt
Elevator Simulator/src/elevator/: Bank.cpp  CMakeLists.txt  Elevator.cpp  ElevatorController.cpp  ElevatorStates.cpp  Panel.cpp  Passenger.cpp  States.cpp
Elevator Simulator/src/elevator/controllers/: ElevatorController.cpp
Elevator Simulator/src/elevator/models/: Bank.cpp  Elevator.cpp  Panel.cpp  Passenger.cpp
Elevator Simulator/src/elevator/services/: DoorService.cpp  ElevatorPassengerService.cpp  ElevatorService.cpp  MovementService.cpp  PassengerService.cpp  StateNotificationService.cpp
Elevator Simulator/test/: BankTests.cpp  CMakeLists.txt  CMakeLists.txt.old  ElevatorTests.cpp  PassengerTests.cpp
LAB/Insertion sort/: .MD  InsertionSort.cpp  main.cpp  test_case1.txt  test_case2.txt  test_case3.txt  test_case4.txt  test_case5.txt
LAB/Plant information (vector)/: Flower.cpp  Plant information (vector).MD  Plant.cpp  Plant.h  main.cpp
LAB/What order/: function_templates.cpp
LAB/Zip code and population/: class_templates.cpp
LAB/in, max, median (function templates)/: main.cpp
University Course Management System/: App.cpp  App.hpp  CMakeLists.txt  Course.cpp  Course.hpp  CourseStudent.cpp  CourseStudent.hpp  Enrollment.cpp  Enrollment.hpp  README.md  Student.cpp  Student.hpp  UniversityCourseManagementSystem.aps  UniversityCourseManagementSystem.cpp  UniversityCourseManagementSystem.slnx  UniversityCourseManagementSystem.vcxproj  UniversityCourseManagementSystem.vcxproj.filters  Utils.cpp  Utils.hpp  ucms
cpp-concepts/: Concepts.cpp  Concepts.h  FunctionArg.cpp  FunctionArg.h  FunctionLocal.cpp  FunctionLocal.h  cpp-concepts.slnx  cpp-concepts.vcxproj  cpp-concepts.vcxproj.filters
